kida fixed misalignment in SB rows

--- a/public/style/board.css
+++ b/public/style/board.css
@@ -4,14 +4,11 @@
 
 .table-fill {
   display: flex;
-  height: 12.3125rem;
   flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
 
+  height: 12.3125rem;
   margin-top: 2rem;
 
-  text-align: center;
   font-family: "Arial", arial, sans-serif;
   font-size: 30px;
   font-weight: 400;
@@ -36,16 +33,13 @@
   justify-content: center;
   align-items: center;
   gap: 0.125rem;
-  align-self: stretch;
 }
 
 .table-fill thead th {
   display: flex;
-  flex-direction: column;
-  align-content: space-between;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex: 1 0 0;
 
   padding: 1rem 4rem;
 
@@ -56,8 +50,11 @@
   font-weight: 700;
 }
 
+.table-fill thead th .filterArrow {
+  margin-left: 1rem;
+}
+
 .table-fill thead th:first-child {
-  flex: none;
   border-top-left-radius: 0.25rem;
 }
 
@@ -65,44 +62,25 @@
   border-top-right-radius: 0.25rem;
 }
 
-.table-fill tbody {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-self: stretch;
-}
-
 .table-fill tbody tr {
   display: flex;
-  padding-top: 0.125rem;
-  justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
-}
-
-.table-fill tbody tr td {
-  display: flex;
-  height: 3.75rem;
   justify-content: center;
   align-items: center;
-  flex: 1 0 0;
+  padding-top: 0.125rem;
+}
+
+.table-fill tbody td {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  padding: 1rem 2rem;
+
+  background: var(--Broke-White, #f4f4f4);
 
   color: var(--Dark-Gray, #333);
   font-size: 1.5rem;
   font-weight: 400;
-}
-
-.table-fill tbody tr td:first-child {
-  display: flex;
-  width: 9.125rem;
-  height: 3.75rem;
-  justify-content: center;
-  align-items: center;
-}
-
-.table-fill tbody tr:nth-child(odd) td {
-  background: var(--Broke-White, #f4f4f4);
 }
 
 .table-fill tbody tr:nth-child(even) td {
@@ -111,6 +89,11 @@
 
 .table-fill tbody tr:hover td {
   background: #ddd;
+}
+
+.fixed_w {
+  flex: auto;
+  width: 0;
 }
 
 /* ===================== Responsive Design ===================== */
